@@ -5,9 +5,9 @@ import static org.mockito.ArgumentMatchers.anyList;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-import java.util.Collections;
 import java.util.List;
-import java.util.Set;
+import java.util.Optional;
+import java.util.concurrent.CompletableFuture;
 
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.SliceImpl;
@@ -28,17 +28,16 @@ import org.junit.jupiter.api.extension.ExtendWith;
 
 import org.cardanofoundation.explorer.common.entity.enumeration.ScriptType;
 import org.cardanofoundation.explorer.common.entity.explorer.NativeScriptInfo;
+import org.cardanofoundation.explorer.common.entity.ledgersync.Block;
 import org.cardanofoundation.explorer.common.entity.ledgersync.Script;
 import org.cardanofoundation.job.common.enumeration.RedisKey;
-import org.cardanofoundation.job.projection.ScriptNumberHolderProjection;
-import org.cardanofoundation.job.projection.ScriptNumberTokenProjection;
-import org.cardanofoundation.job.projection.TxInfoProjection;
 import org.cardanofoundation.job.repository.explorer.NativeScriptInfoRepository;
-import org.cardanofoundation.job.repository.ledgersync.LatestTokenBalanceRepository;
-import org.cardanofoundation.job.repository.ledgersync.MultiAssetRepository;
+import org.cardanofoundation.job.repository.explorer.jooq.JOOQNativeScriptInfoRepository;
+import org.cardanofoundation.job.repository.ledgersync.BlockRepository;
 import org.cardanofoundation.job.repository.ledgersync.ScriptRepository;
-import org.cardanofoundation.job.repository.ledgersync.TxRepository;
+import org.cardanofoundation.job.repository.ledgersyncagg.AddressTxAmountRepository;
 import org.cardanofoundation.job.schedules.NativeScriptInfoSchedule;
+import org.cardanofoundation.job.service.NativeScriptInfoServiceAsync;
 
 @ExtendWith(MockitoExtension.class)
 public class NativeScriptInfoScheduleTest {
@@ -47,10 +46,10 @@ public class NativeScriptInfoScheduleTest {
   @Mock ValueOperations valueOperations;
   @Mock NativeScriptInfoRepository nativeScriptInfoRepository;
   @Mock ScriptRepository scriptRepository;
-  @Mock LatestTokenBalanceRepository latestTokenBalanceRepository;
-  @Mock MultiAssetRepository multiAssetRepository;
-  @Mock TxRepository txRepository;
-
+  @Mock AddressTxAmountRepository addressTxAmountRepository;
+  @Mock JOOQNativeScriptInfoRepository jooqNativeScriptInfoRepository;
+  @Mock NativeScriptInfoServiceAsync nativeScriptInfoServiceAsync;
+  @Mock BlockRepository blockRepository;
   @Captor ArgumentCaptor<List<NativeScriptInfo>> argumentCaptorNativeScriptInfo;
 
   NativeScriptInfoSchedule nativeScriptInfoSchedule;
@@ -61,9 +60,10 @@ public class NativeScriptInfoScheduleTest {
         new NativeScriptInfoSchedule(
             nativeScriptInfoRepository,
             scriptRepository,
-            multiAssetRepository,
-            latestTokenBalanceRepository,
-            txRepository,
+            addressTxAmountRepository,
+            jooqNativeScriptInfoRepository,
+            nativeScriptInfoServiceAsync,
+            blockRepository,
             redisTemplate);
     when(redisTemplate.opsForValue()).thenReturn(valueOperations);
     ReflectionTestUtils.setField(nativeScriptInfoSchedule, "network", "mainnet");
@@ -71,9 +71,6 @@ public class NativeScriptInfoScheduleTest {
 
   @Test
   void syncNativeScriptInfo_shouldInitDataWhenSyncDataFirstTime() {
-    TxInfoProjection txInfoProjection = Mockito.mock(TxInfoProjection.class);
-    when(txInfoProjection.getTxId()).thenReturn(10L);
-    when(txRepository.findCurrentTxInfo()).thenReturn(txInfoProjection);
     when(redisTemplate.opsForValue().get(getRedisKey(RedisKey.NATIVE_SCRIPT_CHECKPOINT.name())))
         .thenReturn(null);
     String scriptHash = "3a9241cd79895e3a8d65261b40077d4437ce71e9d7c8c6c00e3f658e";
@@ -88,26 +85,23 @@ public class NativeScriptInfoScheduleTest {
 
     when(scriptRepository.findAllByTypeIn(anyList(), any(Pageable.class)))
         .thenReturn(new SliceImpl<>(List.of(script)));
-    when(nativeScriptInfoRepository.findAllByScriptHashIn(Set.of(scriptHash)))
-        .thenReturn(Collections.emptyList());
 
-    ScriptNumberTokenProjection scriptNumberTokenProjection =
-        Mockito.mock(ScriptNumberTokenProjection.class);
-    when(scriptNumberTokenProjection.getScriptHash()).thenReturn(scriptHash);
-    when(scriptNumberTokenProjection.getNumberOfTokens()).thenReturn(1L);
-    when(multiAssetRepository.countByPolicyIn(Set.of(scriptHash)))
-        .thenReturn(List.of(scriptNumberTokenProjection));
+    NativeScriptInfo nativeScriptInfo =
+        NativeScriptInfo.builder()
+            .scriptHash(scriptHash)
+            .numberOfAssetHolders(1L)
+            .numberOfTokens(1L)
+            .beforeSlot(23069343L)
+            .numberSig(1L)
+            .type(ScriptType.TIMELOCK)
+            .build();
 
-    ScriptNumberHolderProjection scriptNumberHolderProjection =
-        Mockito.mock(ScriptNumberHolderProjection.class);
-    when(scriptNumberHolderProjection.getScriptHash()).thenReturn(scriptHash);
-    when(scriptNumberHolderProjection.getNumberOfHolders()).thenReturn(1L);
-    when(latestTokenBalanceRepository.countHolderByPolicyIn(Set.of(scriptHash)))
-        .thenReturn(List.of(scriptNumberHolderProjection));
+    when(nativeScriptInfoServiceAsync.buildNativeScriptInfoList(any()))
+        .thenReturn(CompletableFuture.completedFuture(List.of(nativeScriptInfo)));
 
     nativeScriptInfoSchedule.syncNativeScriptInfo();
-    verify(nativeScriptInfoRepository, Mockito.times(1))
-        .saveAll(argumentCaptorNativeScriptInfo.capture());
+    verify(jooqNativeScriptInfoRepository, Mockito.times(1))
+        .insertAll(argumentCaptorNativeScriptInfo.capture());
 
     List<NativeScriptInfo> nativeScriptInfoList = argumentCaptorNativeScriptInfo.getValue();
     Assertions.assertEquals(1, nativeScriptInfoList.size());
@@ -121,12 +115,13 @@ public class NativeScriptInfoScheduleTest {
 
   @Test
   void syncSmartContractInfo_shouldUpdateDataWhenSyncDataNotFirstTime() {
-    TxInfoProjection txInfoProjection = Mockito.mock(TxInfoProjection.class);
-    when(txInfoProjection.getTxId()).thenReturn(10L);
-    when(txRepository.findCurrentTxInfo()).thenReturn(txInfoProjection);
     when(redisTemplate.opsForValue().get(getRedisKey(RedisKey.NATIVE_SCRIPT_CHECKPOINT.name())))
         .thenReturn(3);
     when(nativeScriptInfoRepository.count()).thenReturn(1L);
+    when(addressTxAmountRepository.getMaxSlotNoFromCursor()).thenReturn(5L);
+    when(blockRepository.findLatestBlock())
+        .thenReturn(Optional.of(Block.builder().slotNo(6L).build()));
+
     String scriptHash = "02f68378e37af4545d027d0a9fa5581ac682897a3fc1f6d8f936ed2b";
     Script script =
         Script.builder()
@@ -137,31 +132,27 @@ public class NativeScriptInfoScheduleTest {
                 "{\"type\":\"sig\",\"keyHash\":\"89d555c7a028bc560ea44e52a81c866088566f3a99c9989a5a183940\"}")
             .build();
 
-    when(scriptRepository.findAllByHashIn(List.of(scriptHash))).thenReturn(List.of(script));
-    when(nativeScriptInfoRepository.findAllByScriptHashIn(Set.of(scriptHash)))
-        .thenReturn(Collections.emptyList());
+    when(addressTxAmountRepository.findPolicyBySlotInRange(any(), any()))
+        .thenReturn(List.of(scriptHash));
+    when(scriptRepository.findAllByHashInAndTypeIn(anyList(), anyList()))
+        .thenReturn(List.of(script));
 
-    when(multiAssetRepository.findPolicyByTxIn(
-            3L, 10L, List.of(ScriptType.TIMELOCK, ScriptType.MULTISIG)))
-        .thenReturn(Set.of(scriptHash));
+    NativeScriptInfo nativeScriptInfo =
+        NativeScriptInfo.builder()
+            .scriptHash(scriptHash)
+            .numberOfAssetHolders(15L)
+            .numberOfTokens(3L)
+            .numberSig(1L)
+            .type(ScriptType.TIMELOCK)
+            .build();
 
-    ScriptNumberTokenProjection scriptNumberTokenProjection =
-        Mockito.mock(ScriptNumberTokenProjection.class);
-    when(scriptNumberTokenProjection.getScriptHash()).thenReturn(scriptHash);
-    when(scriptNumberTokenProjection.getNumberOfTokens()).thenReturn(3L);
-    when(multiAssetRepository.countByPolicyIn(Set.of(scriptHash)))
-        .thenReturn(List.of(scriptNumberTokenProjection));
-
-    ScriptNumberHolderProjection scriptNumberHolderProjection =
-        Mockito.mock(ScriptNumberHolderProjection.class);
-    when(scriptNumberHolderProjection.getScriptHash()).thenReturn(scriptHash);
-    when(scriptNumberHolderProjection.getNumberOfHolders()).thenReturn(15L);
-    when(latestTokenBalanceRepository.countHolderByPolicyIn(Set.of(scriptHash)))
-        .thenReturn(List.of(scriptNumberHolderProjection));
+    when(nativeScriptInfoServiceAsync.buildNativeScriptInfoList(any()))
+        .thenReturn(CompletableFuture.completedFuture(List.of(nativeScriptInfo)));
+    ;
 
     nativeScriptInfoSchedule.syncNativeScriptInfo();
-    verify(nativeScriptInfoRepository, Mockito.times(1))
-        .saveAll(argumentCaptorNativeScriptInfo.capture());
+    verify(jooqNativeScriptInfoRepository, Mockito.times(1))
+        .insertAll(argumentCaptorNativeScriptInfo.capture());
 
     List<NativeScriptInfo> nativeScriptInfoList = argumentCaptorNativeScriptInfo.getValue();
     Assertions.assertEquals(1, nativeScriptInfoList.size());
